attempt to fix sizing bugs on mobile

--- a/src/components/NewNoteForm/newNoteForm.scss
+++ b/src/components/NewNoteForm/newNoteForm.scss
@@ -6,6 +6,7 @@
   gap: 1rem;
   padding: 1rem 0;
   min-height: calc(100vh - #{$headerHeight});
+  max-width: 100vw;
 
   &__input {
     border: none;
